--- a/index.html
+++ b/index.html
@@ -28,51 +28,51 @@
   <body>
     <!--Header-->
     <header class="header">
-      <div class="container header-container">
+      <div class="container header__container">
         <a class="logo link" href="./">
           <img src="./imanges/logo.png" alt="One11 Bakery"
         /></a>
-        <nav class="header-nav">
-          <ul class="header-nav-list list">
-            <li class="header-nav-list-item">
-              <a class="header-nav-link link" href="#advantages">Про нас</a>
+        <nav class="nav">
+          <ul class="nav__list list">
+            <li class="nav__item">
+              <a class="nav__link link" href="#advantages">Про нас</a>
             </li>
-            <li class="header-nav-list-item">
-              <a class="header-nav-link link" href="#products">Меню</a>
+            <li class="nav__item">
+              <a class="nav__link link" href="#products">Меню</a>
             </li>
-            <li class="header-nav-list-item">
-              <a class="header-nav-link link" href="#delivery">Доставка</a>
+            <li class="nav__item">
+              <a class="nav__link link" href="#delivery">Доставка</a>
             </li>
           </ul>
         </nav>
-        <ul class="header-list list">
-          <li class="header-list-item">
-            <a class="header-link link" href="tel:+380503086282"
+        <ul class="contaсts__list list">
+          <li class="contaсts__item">
+            <a class="contaсts__link link" href="tel:+380503086282"
               >+38 (050) 308 62 82</a
             >
           </li>
-          <li class="header-list-item">
+          <li class="contaсts__item">
             <a
-              class="socials-link link"
+              class="socials__link link"
               href="https://t.me/One11_Bakery"
               target="_blank"
               rel="noreferrer noopener"
               aria-label="telegram"
             >
-              <svg class="socials-icon" width="32" height="32">
+              <svg class="socials__icon" width="32" height="32">
                 <use href="./imanges/incons.svg#icon-telegram"></use></svg
             ></a>
           </li>
-          <li class="header-list-item">
+          <li class="contaсts__item">
             <a
-              class="socials-link link"
+              class="socials__link link"
               href="https://www.instagram.com/one11bakery/"
               target="_blank"
               rel="noreferrer noopener"
               aria-label="instagram"
             >
               <svg
-                class="socials-icon"
+                class="socials__icon"
                 xmlns="http://www.w3.org/2000/svg"
                 width="32"
                 height="32"
@@ -176,13 +176,13 @@
     <main>
       <!--Hero-->
       <section class="hero section">
-        <div class="container text-container hero-container">
+        <div class="container text__container">
           <div class="carousel">
             <div class="slide" style="background-image: url(./imanges/hero/hero1.jpg);">
-              <h1 class="hero-title animated-text">
+              <h1 class="hero__title text--animated">
                 Наші круасани - це симфонія смаків.
               </h1>
-              <h2 class="hero-subtitle animated-subtitle">Cпівпрацюйте з нами !</h2>
+              <h2 class="hero__subtitle subtitle--animated">Cпівпрацюйте з нами !</h2>
             </div>
             <div class="slide" style="background-image: url(./imanges/hero/hero2.jpg);"></div>
             <div class="slide" style="background-image: url(./imanges/hero/hero3.jpg);"></div>
@@ -192,46 +192,46 @@
       <!--Advantages-->
       <section class="advantages section">
         <h2 id="advantages" class="visually-hidden">ПРО НАС</h2>
-        <div class="container advantages-container">
-          <ul class="advantages-list list">
-            <li class="advantages-list-item">
+        <div class="container advantages__container">
+          <ul class="advantages__list list">
+            <li class="advantages__item">
               <img
-                class="advantages-img"
+                class="advantages__img"
                 src="./imanges/advantages/1-img.jpg"
                 alt="Серед великої жмені борошна лежить шматок вершкового масла"
                 width="370"
                 height="310"
               />
-              <p class="advantages-text">
+              <p class="advantages__text">
                 Кожен наш круасан майже на чверть складється зі справжнього
                 вершкового масла з відсотком жирів не менш ніж 82%. Це є догма
                 класичної рецептури, якої ми чітко дотримуємося.
               </p>
             </li>
-            <li class="advantages-list-item">
-              <p class="advantages-text light-text">
+            <li class="advantages__item">
+              <p class="advantages__text text--light">
                 На виготовлення крафтового круасана необхідно цілу добу для
                 ретельної та багатоетапної обробки тіста. Це включає
                 замішування, кілька етапів вистоювання, та складання тіста з
                 маслом.
               </p>
               <img
-                class="advantages-img"
+                class="advantages__img"
                 src="./imanges/advantages/2-img.jpg"
                 alt="На кухні пекарні дівчина у фартушці скручує тісто у форму краусанів"
                 width="370"
                 height="310"
               />
             </li>
-            <li class="advantages-list-item">
+            <li class="advantages__item">
               <img
-                class="advantages-img"
+                class="advantages__img"
                 src="./imanges/advantages/3-img.jpg"
                 alt="У духовці випечені круасани"
                 width="370"
                 height="310"
               />
-              <p class="advantages-text">
+              <p class="advantages__text">
                 В результаті ми отримуємо справжній круасан, який володіє такими
                 якостями, як хрусткий ззовні, легкий і повітряний, а головне -
                 соковитий всередині.
@@ -242,178 +242,178 @@
       </section>
       <!--Product range-->
       <section class="products section">
-        <div class="container products-container">
-          <h2 id="products" class="products-title">Ми пропонуюємо</h2>
-          <ul class="products-list list">
-            <li class="products-list-item">
+        <div class="container products__container">
+          <h2 id="products" class="products__title">Ми пропонуюємо</h2>
+          <ul class="products__list list">
+            <li class="products__item">
               <img
-                class="products-list-img"
+                class="products__img"
                 src="./imanges/products/almond.jpg"
                 alt="Круасан з мигдалем"
                 width="280"
                 height="250"
               />
-              <div class="products-wrapper">
-                <h3 class="products-subtitle">мигдальний</h3>
-                <p class="products-text">
+              <div class="products__wrapper">
+                <h3 class="products__subtitle">мигдальний</h3>
+                <p class="products__text">
                   з франжипановою начинкою з мигдального горіха
                 </p>
               </div>
             </li>
-            <li class="products-list-item">
+            <li class="products__item">
               <img
-                class="products-list-img"
+                class="products__img"
                 src="./imanges/products/cherry.jpg"
                 alt="Круасан з вишнею"
                 width="280"
                 height="250"
               />
-              <div class="products-wrapper">
-                <h3 class="products-subtitle">вишневий</h3>
-                <p class="products-text">з вишнево - шоколадною начинкою</p>
+              <div class="products__wrapper">
+                <h3 class="products__subtitle">вишневий</h3>
+                <p class="products__text">з вишнево - шоколадною начинкою</p>
               </div>
             </li>
-            <li class="products-list-item">
+            <li class="products__item">
               <img
-                class="products-list-img"
+                class="products__img"
                 src="./imanges/products/chocolate.jpg"
                 alt="Круасан политий шоколадом"
                 width="280"
                 height="250"
               />
-              <div class="products-wrapper">
-                <h3 class="products-subtitle">шоколадний</h3>
-                <p class="products-text">з шоколадно - фундучною начинкою</p>
+              <div class="products__wrapper">
+                <h3 class="products__subtitle">шоколадний</h3>
+                <p class="products__text">з шоколадно - фундучною начинкою</p>
               </div>
             </li>
-            <li class="products-list-item">
+            <li class="products__item">
               <img
-                class="products-list-img"
+                class="products__img"
                 src="./imanges/products/chicken.jpg"
                 alt="Розрізаний круасан всередині шматочки курки"
                 width="280"
                 height="250"
               />
-              <div class="products-wrapper">
-                <h3 class="products-subtitle">з куркою</h3>
-                <p class="products-text">з сиром, салатом та соусом тартар</p>
+              <div class="products__wrapper">
+                <h3 class="products__subtitle">з куркою</h3>
+                <p class="products__text">з сиром, салатом та соусом тартар</p>
               </div>
             </li>
-            <li class="products-list-item">
+            <li class="products__item">
               <img
-                class="products-list-img"
+                class="products__img"
                 src="./imanges/products/salmon.jpg"
                 alt="Розрізаний круасан всередині шматочки сьомги"
                 width="280"
                 height="250"
               />
-              <div class="products-wrapper">
-                <h3 class="products-subtitle">з сьомгою</h3>
-                <p class="products-text">
+              <div class="products__wrapper">
+                <h3 class="products__subtitle">з сьомгою</h3>
+                <p class="products__text">
                   з соусом песто, сирним соусом та салатом
                 </p>
               </div>
             </li>
-            <li class="products-list-item">
+            <li class="products__item">
               <img
-                class="products-list-img"
+                class="products__img"
                 src="./imanges/products/prosciutto.jpg"
                 alt="Розрізаний круасан всередині шматочки прошутто"
                 width="280"
                 height="250"
               />
-              <div class="products-wrapper">
-                <h3 class="products-subtitle">з прошутто</h3>
-                <p class="products-text">
+              <div class="products__wrapper">
+                <h3 class="products__subtitle">з прошутто</h3>
+                <p class="products__text">
                   з сирнім соусом, руколою, в’яленими томатоми та соусом песто
                 </p>
               </div>
             </li>
-            <li class="products-list-item">
+            <li class="products__item">
               <img
-                class="products-list-img"
+                class="products__img"
                 src="./imanges/products/ham.jpg"
                 alt="Розрізаний круасан всередині шматочки шинки"
                 width="280"
                 height="250"
               />
-              <div class="products-wrapper">
-                <h3 class="products-subtitle">з шинкою</h3>
-                <p class="products-text">з сиром, салатом та соусом тартар</p>
+              <div class="products__wrapper">
+                <h3 class="products__subtitle">з шинкою</h3>
+                <p class="products__text">з сиром, салатом та соусом тартар</p>
               </div>
             </li>
-            <li class="products-list-item">
+            <li class="products__item">
               <img
-                class="products-list-img"
+                class="products__img"
                 src="./imanges/products/turkey.jpg"
                 alt="Розрізаний круасан всередині шматочки індички"
                 width="280"
                 height="250"
               />
-              <div class="products-wrapper">
-                <h3 class="products-subtitle">з індичкою</h3>
-                <p class="products-text">
+              <div class="products__wrapper">
+                <h3 class="products__subtitle">з індичкою</h3>
+                <p class="products__text">
                   з в’яленими томатами та соусом тартар
                 </p>
               </div>
             </li>
-            <li class="products-list-item">
+            <li class="products__item">
               <img
-                class="products-list-img"
+                class="products__img"
                 src="./imanges/products/salami.jpg"
                 alt="Розрізаний круасан всередині шматочки ковбаси салямі"
                 width="280"
                 height="250"
               />
-              <div class="products-wrapper">
-                <h3 class="products-subtitle">з салямі</h3>
-                <p class="products-text">з сиром, салатом та соусом тартар</p>
+              <div class="products__wrapper">
+                <h3 class="products__subtitle">з салямі</h3>
+                <p class="products__text">з сиром, салатом та соусом тартар</p>
               </div>
             </li>
-            <li class="products-list-item">
+            <li class="products__item">
               <img
-                class="products-list-img"
+                class="products__img"
                 src="./imanges/products/beef.jpg"
                 alt="Розрізаний круасан всередині шматочки яловичини"
                 width="280"
                 height="250"
               />
-              <div class="products-wrapper">
-                <h3 class="products-subtitle">з яловичиною</h3>
-                <p class="products-text">з сиром, салатом та соусом барбекю</p>
+              <div class="products__wrapper">
+                <h3 class="products__subtitle">з яловичиною</h3>
+                <p class="products__text">з сиром, салатом та соусом барбекю</p>
               </div>
             </li>
-            <li class="products-list-item">
+            <li class="products__item">
               <img
-                class="products-list-img"
+                class="products__img"
                 src="./imanges/products/half-stuff.jpg"
                 alt="Круасан без начинки"
                 width="280"
                 height="250"
               />
-              <div class="products-wrapper">
-                <h3 class="products-subtitle">класичний</h3>
-                <p class="products-text">
+              <div class="products__wrapper">
+                <h3 class="products__subtitle">класичний</h3>
+                <p class="products__text">
                   порожній для самостійного наповнення
                 </p>
               </div>
             </li>
-            <li class="products-list-item">
+            <li class="products__item">
               <img
-                class="products-list-img"
+                class="products__img"
                 src="./imanges/products/package.jpg"
                 alt="Круасан в упаковці"
                 width="280"
                 height="250"
               />
-              <div class="products-wrapper-last">
-                <p class="products-text">індивідуальна упаковка</p>
+              <div class="products__wrapper--last">
+                <p class="products__text">індивідуальна упаковка</p>
               </div>
             </li>
           </ul>
-          <div class="products-blok">
-            <div class="products-blok-anim">
-          <h2 class="products-newstitle">
+          <div class="blok">
+            <div class="blok__anim">
+          <h2 class="blok__newstitle">
             далі буде ще, бо ми вже розробляємо цікаві новинки у світі
             листкового тіста.
           </h2>
@@ -423,22 +423,22 @@
       </section>
       <!--Delivery-->
       <section class="delivery section">
-        <div class="container delivery-container">
-          <h2 id="delivery" class="delivery-title visually-hidden">ДОСТАВКА</h2>
-          <ul class="delivery-list list">
-            <li class="delivery-list-item">
-              <h3 class="delivery-list-text">
+        <div class="container delivery__container">
+          <h2 id="delivery" class="delivery__title visually-hidden">ДОСТАВКА</h2>
+          <ul class="delivery__list list">
+            <li class="delivery__item">
+              <h3 class="delivery__text">
                 Безкоштовна доставка в м. Київ та м. Вишгород здійснюється до 5
                 разів на тиждень, в залежності від вашої адреси.
               </h3>
             </li>
-            <li class="delivery-list-item">
-              <h3 class="delivery-list-text light-text">
+            <li class="delivery__item">
+              <h3 class="delivery__text text--light">
                 Замовлення приймаються до 19:00.
               </h3>
             </li>
-            <li class="delivery-list-item">
-              <h3 class="delivery-list-text">
+            <li class="delivery__item">
+              <h3 class="delivery__text">
                 Можливе самовивезення за адресою м. Вишгород, вул. Ватутіна 111.
               </h3>
             </li>
@@ -448,36 +448,36 @@
     </main>
     <!--Footer-->
     <footer class="footer">
-      <div class="container footer-container">
+      <div class="container footer__container">
         <a class="logo link" href="./"
           ><img src="./imanges/logo.png" alt="One11 Bakery"
         /></a>
-        <a class="footer-link link" href="tel:+380503086282"
+        <a class="footer__link link" href="tel:+380503086282"
           >+38 (050) 308 62 82</a
         >
-        <ul class="footer-list list">
-          <li class="footer-list-item">
+        <ul class="contaсts__list list">
+          <li class="contaсts__item">
             <a
-              class="socials-link link"
+              class="socials__link link"
               href="https://t.me/One11_Bakery"
               target="_blank"
               rel="noreferrer noopener"
               aria-label="telegram"
             >
-              <svg class="socials-icon" width="32" height="32">
+              <svg class="socials__icon" width="32" height="32">
                 <use href="./imanges/incons.svg#icon-telegram"></use></svg
             ></a>
           </li>
-          <li class="footer-list-item">
+          <li class="contaсts__item">
             <a
-              class="socials-link link"
+              class="socials__link link"
               href="https://www.instagram.com/one11bakery/"
               target="_blank"
               rel="noreferrer noopener"
               aria-label="instagram"
             >
               <svg
-                class="socials-icon"
+                class="socials__icon"
                 xmlns="http://www.w3.org/2000/svg"
                 width="32"
                 height="32"
