--- a/index.html
+++ b/index.html
@@ -690,7 +690,7 @@
         </ul>
 
         <button class="menu-close js-close-menu" type="button">
-          <svg class="close__icon" width="40" height="40">
+          <svg class="menu-close__icon" width="40" height="40">
             <use href="./imanges/incons.svg#menu-close"></use>
           </svg>
         </button>
