--- a/index.html
+++ b/index.html
@@ -31,16 +31,31 @@
     <header class="header">
       <div class="container header__container">
         <a class="logo link" href="./">
-          <img
-            class="logo__item"
-            src="./imanges/base/logo_sm.png"
-            alt="One11 Bakery"
-
-        /></a>
+          <picture>
+            <source
+              srcset="./images/base/logo_lg.png 1x, ./images/base/logo_lg@2x.png 2x"
+              media="(min-width:1200px)"
+            />
+            <source
+              srcset="./images/base/logo_md.png 1x, ./images/base/logo_md@2x.png 2x"
+              media="(min-width:768px)"
+            />
+            <source
+              srcset="./images/base/logo_sm.png 1x, ./images/base/logo_sm@2x.png 2x"
+              media="(max-width:767px)"
+            />
+            <img
+              class="logo__item"
+              src="./images/base/logo_sm.png"
+              alt="One11 Bakery"
+              width="157"
+            />
+          </picture>
+        </a>
 
         <button class="menu-btn js-open-menu" type="button">
           <svg class="menu-icon" width="32" height="32">
-            <use href="./imanges/incons.svg#burger-menu"></use>
+            <use href="./images/incons.svg#burger-menu"></use>
           </svg>
         </button>
 
@@ -70,7 +85,7 @@
               aria-label="telegram"
             >
               <svg class="header__icon" width="32" height="32">
-                <use href="./imanges/incons.svg#icon-telegram"></use></svg
+                <use href="./images/incons.svg#icon-telegram"></use></svg
             ></a>
           </li>
           <li class="header__item">
@@ -81,73 +96,8 @@
               rel="noreferrer noopener"
               aria-label="instagram"
             >
-              <svg
-                class="header__icon"
-                xmlns="http://www.w3.org/2000/svg"
-                width="32"
-                height="32"
-                fill="none"
-                stroke="#000"
-                stroke-width="0"
-                viewBox="0 0 32 32"
-              >
-                <rect width="28" height="28" x="2" y="2" fill="url(#a)" stroke="none" rx="6" />
-                <rect width="28" height="28" x="2" y="2" fill="url(#b)" stroke="none" rx="6" />
-                <rect width="28" height="28" x="2" y="2" fill="url(#c)" stroke="none" rx="6" />
-                <path fill="#fff" stroke="none" d="M23 10.5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0Z" />
-                <path
-                  fill="#fff"
-                  fill-rule="evenodd"
-                  stroke="none"
-                  d="M16 21a5 5 0 1 0 0-10 5 5 0 0 0 0 10Zm0-2a3 3 0 1 0 0-6 3 3 0 0 0 0 6Z"
-                  clip-rule="evenodd"
-                />
-                <path
-                  fill="#fff"
-                  fill-rule="evenodd"
-                  stroke="none"
-                  d="M6 15.6c0-3.36 0-5.04.654-6.324a6 6 0 0 1 2.622-2.622C10.56 6 12.24 6 15.6 6h.8c3.36 0 5.04 0 6.324.654a6 6 0 0 1 2.622 2.622C26 10.56 26 12.24 26 15.6v.8c0 3.36 0 5.04-.654 6.324a6 6 0 0 1-2.622 2.622C21.44 26 19.76 26 16.4 26h-.8c-3.36 0-5.04 0-6.324-.654a6 6 0 0 1-2.622-2.622C6 21.44 6 19.76 6 16.4v-.8ZM15.6 8h.8c1.713 0 2.878.002 3.778.075.877.072 1.325.202 1.638.361a4 4 0 0 1 1.748 1.748c.16.313.29.761.36 1.638.074.9.076 2.065.076 3.778v.8c0 1.713-.002 2.878-.075 3.778-.072.877-.202 1.325-.361 1.638a4 4 0 0 1-1.748 1.748c-.313.16-.761.29-1.638.36-.9.074-2.065.076-3.778.076h-.8c-1.713 0-2.878-.002-3.778-.075-.877-.072-1.325-.202-1.638-.361a4 4 0 0 1-1.748-1.748c-.16-.313-.29-.761-.36-1.638C8.001 19.278 8 18.113 8 16.4v-.8c0-1.713.002-2.878.075-3.778.072-.877.202-1.325.361-1.638a4 4 0 0 1 1.748-1.748c.313-.16.761-.29 1.638-.36.9-.074 2.065-.076 3.778-.076Z"
-                  clip-rule="evenodd"
-                />
-                <defs>
-                  <radialGradient
-                    id="a"
-                    cx="0"
-                    cy="0"
-                    r="1"
-                    gradientTransform="rotate(-55.376 27.916 .066) scale(25.5196)"
-                    gradientUnits="userSpaceOnUse"
-                  >
-                    <stop stop-color="#B13589" />
-                    <stop offset=".793" stop-color="#C62F94" />
-                    <stop offset="1" stop-color="#8A3AC8" />
-                  </radialGradient>
-                  <radialGradient
-                    id="b"
-                    cx="0"
-                    cy="0"
-                    r="1"
-                    gradientTransform="rotate(-65.136 29.766 6.89) scale(22.5942)"
-                    gradientUnits="userSpaceOnUse"
-                  >
-                    <stop stop-color="#E0E8B7" />
-                    <stop offset=".445" stop-color="#FB8A2E" />
-                    <stop offset=".715" stop-color="#E2425C" />
-                    <stop offset="1" stop-color="#E2425C" stop-opacity="0" />
-                  </radialGradient>
-                  <radialGradient
-                    id="c"
-                    cx="0"
-                    cy="0"
-                    r="1"
-                    gradientTransform="matrix(38.50003 -5.5 1.1764 8.23476 .5 3)"
-                    gradientUnits="userSpaceOnUse"
-                  >
-                    <stop offset=".157" stop-color="#406ADC" />
-                    <stop offset=".468" stop-color="#6A45BE" />
-                    <stop offset="1" stop-color="#6A45BE" stop-opacity="0" />
-                  </radialGradient>
-                </defs>
+              <svg class="header__icon" width="32" height="32">
+                <use href="./images/incons.svg#icon-instagram"></use>
               </svg>
             </a>
           </li>
@@ -163,14 +113,14 @@
       <section class="hero section">
         <div class="container text__container">
           <div class="carousel">
-            <div class="slide" style="background-image: url(./imanges/hero/hero1.jpg);">
+            <div class="slide" style="background-image: url(./images/hero/hero1.jpg);">
               <h1 class="hero__title text--animated">
                 Наші круасани - це симфонія смаків.
               </h1>
               <h2 class="hero__subtitle subtitle--animated">Cпівпрацюйте з нами !</h2>
             </div>
-            <div class="slide" style="background-image: url(./imanges/hero/hero2.jpg);"></div>
-            <div class="slide" style="background-image: url(./imanges/hero/hero3.jpg);"></div>
+            <div class="slide" style="background-image: url(./images/hero/hero2.jpg);"></div>
+            <div class="slide" style="background-image: url(./images/hero/hero3.jpg);"></div>
           </div>  
         </div>
       </section> 
@@ -446,24 +396,26 @@
     <footer class="footer">
       <div class="container footer__container">
         <a class="logo link" href="./">
-        <picture>
-          <source
-            media="min-width:1200px"
-            srcset="./imanges/base/logo_lg.png 1x, ./imanges/base/logo_lg@2x.png 2x"
-            type="image/png"
-          />
-          <source
-            media="min-width:768px"
-            srcset="./imanges/base/logo_md.png 1x, ./imanges/base/logo_md@2x.png 2x"
-            type="image/png"
-          />
-          <source
-            media="max-width:767px"
-            srcset="./imanges/base/logo_sm.png 1x, ./imanges/base/logo_sm@2x.png 2x"
-            type="image/png"
-          />
-          <img src="./imanges/base/logo_sm.png" alt="One11 Bakery" />
-        </picture>
+          <picture>
+            <source
+              srcset="./images/base/logo_lg.png 1x, ./images/base/logo_lg@2x.png 2x"
+              media="(min-width:1200px)"
+            />
+            <source
+              srcset="./images/base/logo_md.png 1x, ./images/base/logo_md@2x.png 2x"
+              media="(min-width:768px)"
+            />
+            <source
+              srcset="./images/base/logo_sm.png 1x, ./images/base/logo_sm@2x.png 2x"
+              media="(max-width:767px)"
+            />
+            <img
+              class="logo__item"
+              src="./images/base/logo_sm.png"
+              alt="One11 Bakery"
+              width="157"
+            />
+          </picture>
         </a>
 
         <a class="footer__phone link" href="tel:+380503086282">+38 (050) 308 62 82</a>
@@ -477,7 +429,7 @@
               aria-label="telegram"
             >
               <svg class="footer__icon" width="32" height="32">
-                <use href="./imanges/incons.svg#icon-telegram"></use></svg
+                <use href="./images/incons.svg#icon-telegram"></use></svg
             ></a>
           </li>
           <li class="footer__item">
@@ -488,10 +440,9 @@
               rel="noreferrer noopener"
               aria-label="instagram"
             >
-            <svg class="footer__icon" width="32" height="32">
-              <use href="./imanges/incons.svg#icon-instagram"></use></svg
-          >
-              
+              <svg class="footer__icon" width="32" height="32">
+                <use href="./images/incons.svg#icon-instagram"></use>
+              </svg>
             </a>
           </li>
         </ul>
@@ -523,9 +474,10 @@
               aria-label="telegram"
             >
               <svg class="mobile-socials__icon" width="32" height="32">
-                <use href="./imanges/incons.svg#icon-telegram"></use></svg
+                <use href="./images/incons.svg#icon-telegram"></use></svg
             ></a>
           </li>
+
           <li class="mobile-socials__item">
             <a
               class="mobile-socials__link link"
@@ -534,73 +486,8 @@
               rel="noreferrer noopener"
               aria-label="instagram"
             >
-              <svg
-                class="mobile-socials__icon"
-                xmlns="http://www.w3.org/2000/svg"
-                width="32"
-                height="32"
-                fill="none"
-                stroke="#000"
-                stroke-width="0"
-                viewBox="0 0 32 32"
-              >
-                <rect width="28" height="28" x="2" y="2" fill="url(#a)" stroke="none" rx="6" />
-                <rect width="28" height="28" x="2" y="2" fill="url(#b)" stroke="none" rx="6" />
-                <rect width="28" height="28" x="2" y="2" fill="url(#c)" stroke="none" rx="6" />
-                <path fill="#fff" stroke="none" d="M23 10.5a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0Z" />
-                <path
-                  fill="#fff"
-                  fill-rule="evenodd"
-                  stroke="none"
-                  d="M16 21a5 5 0 1 0 0-10 5 5 0 0 0 0 10Zm0-2a3 3 0 1 0 0-6 3 3 0 0 0 0 6Z"
-                  clip-rule="evenodd"
-                />
-                <path
-                  fill="#fff"
-                  fill-rule="evenodd"
-                  stroke="none"
-                  d="M6 15.6c0-3.36 0-5.04.654-6.324a6 6 0 0 1 2.622-2.622C10.56 6 12.24 6 15.6 6h.8c3.36 0 5.04 0 6.324.654a6 6 0 0 1 2.622 2.622C26 10.56 26 12.24 26 15.6v.8c0 3.36 0 5.04-.654 6.324a6 6 0 0 1-2.622 2.622C21.44 26 19.76 26 16.4 26h-.8c-3.36 0-5.04 0-6.324-.654a6 6 0 0 1-2.622-2.622C6 21.44 6 19.76 6 16.4v-.8ZM15.6 8h.8c1.713 0 2.878.002 3.778.075.877.072 1.325.202 1.638.361a4 4 0 0 1 1.748 1.748c.16.313.29.761.36 1.638.074.9.076 2.065.076 3.778v.8c0 1.713-.002 2.878-.075 3.778-.072.877-.202 1.325-.361 1.638a4 4 0 0 1-1.748 1.748c-.313.16-.761.29-1.638.36-.9.074-2.065.076-3.778.076h-.8c-1.713 0-2.878-.002-3.778-.075-.877-.072-1.325-.202-1.638-.361a4 4 0 0 1-1.748-1.748c-.16-.313-.29-.761-.36-1.638C8.001 19.278 8 18.113 8 16.4v-.8c0-1.713.002-2.878.075-3.778.072-.877.202-1.325.361-1.638a4 4 0 0 1 1.748-1.748c.313-.16.761-.29 1.638-.36.9-.074 2.065-.076 3.778-.076Z"
-                  clip-rule="evenodd"
-                />
-                <defs>
-                  <radialGradient
-                    id="a"
-                    cx="0"
-                    cy="0"
-                    r="1"
-                    gradientTransform="rotate(-55.376 27.916 .066) scale(25.5196)"
-                    gradientUnits="userSpaceOnUse"
-                  >
-                    <stop stop-color="#B13589" />
-                    <stop offset=".793" stop-color="#C62F94" />
-                    <stop offset="1" stop-color="#8A3AC8" />
-                  </radialGradient>
-                  <radialGradient
-                    id="b"
-                    cx="0"
-                    cy="0"
-                    r="1"
-                    gradientTransform="rotate(-65.136 29.766 6.89) scale(22.5942)"
-                    gradientUnits="userSpaceOnUse"
-                  >
-                    <stop stop-color="#E0E8B7" />
-                    <stop offset=".445" stop-color="#FB8A2E" />
-                    <stop offset=".715" stop-color="#E2425C" />
-                    <stop offset="1" stop-color="#E2425C" stop-opacity="0" />
-                  </radialGradient>
-                  <radialGradient
-                    id="c"
-                    cx="0"
-                    cy="0"
-                    r="1"
-                    gradientTransform="matrix(38.50003 -5.5 1.1764 8.23476 .5 3)"
-                    gradientUnits="userSpaceOnUse"
-                  >
-                    <stop offset=".157" stop-color="#406ADC" />
-                    <stop offset=".468" stop-color="#6A45BE" />
-                    <stop offset="1" stop-color="#6A45BE" stop-opacity="0" />
-                  </radialGradient>
-                </defs>
+              <svg class="mobile-socials__icon" width="32" height="32">
+                <use href="./images/incons.svg#icon-instagram"></use>
               </svg>
             </a>
           </li>
@@ -608,7 +495,7 @@
 
         <button class="menu-close js-close-menu" type="button">
           <svg class="menu-close__icon" width="40" height="40">
-            <use href="./imanges/incons.svg#menu-close"></use>
+            <use href="./images/incons.svg#menu-close"></use>
           </svg>
         </button>
       </div>
