--- a/index.html
+++ b/index.html
@@ -75,6 +75,12 @@
 
         <a class="header__phone link" href="tel:+380503086282">+38 (050) 308 62 82</a>
 
+        <a class="header-mobile link" href="tel:+380503086282">
+          <svg class="header-mobile__icon" width="32" height="32">
+            <use href="./images/incons.svg#icon-phone"></use>
+          </svg>
+        </a>
+
         <ul class="header__list list">
           <li class="header__item">
             <a
