--- a/index.html
+++ b/index.html
@@ -131,8 +131,8 @@
       <section class="advantages section">
         <h2 id="advantages" class="visually-hidden">ПРО НАС</h2>
         <div class="container advantages__container">
-          <ul class="advantages__list list">
-            <li class="advantages__item">
+          <ul class="advantages__list card-set list">
+            <li class="advantages__item card-set-item">
               <picture>
                 <source
                   srcset="
@@ -161,20 +161,22 @@
                   alt="Серед великої жмені борошна лежить шматок вершкового масла"
                 />
               </picture>
-
+            </li>
+            <li class="advantages__item card-set-item">
               <p class="advantages__text">
                 Кожен наш круасан майже на чверть складється зі справжнього вершкового масла з
                 відсотком жирів не менш ніж 82%. Це є догма класичної рецептури, якої ми чітко
                 дотримуємося.
               </p>
             </li>
-            <li class="advantages__item">
+            <li class="advantages__item card-set-item">
               <p class="advantages__text text--light">
                 На виготовлення крафтового круасана необхідно цілу добу для ретельної та
                 багатоетапної обробки тіста. Це включає замішування, кілька етапів вистоювання, та
                 складання тіста з маслом.
               </p>
-
+            </li>
+            <li class="advantages__item card-set-item">
               <picture>
                 <source
                   srcset="
@@ -205,7 +207,7 @@
                 />
               </picture>
             </li>
-            <li class="advantages__item">
+            <li class="advantages__item card-set-item">
               <picture>
                 <source
                   srcset="
@@ -234,7 +236,8 @@
                   alt="У духовці випечені круасани"
                 />
               </picture>
-
+            </li>
+            <li class="advantages__item card-set-item">
               <p class="advantages__text">
                 В результаті ми отримуємо справжній круасан, який володіє такими якостями, як
                 хрусткий ззовні, легкий і повітряний, а головне - соковитий всередині.
