--- a/index.html
+++ b/index.html
@@ -463,8 +463,7 @@
           <div class="blok">
             <div class="blok__anim">
           <h2 class="blok__newstitle">
-            далі буде ще, бо ми вже розробляємо цікаві новинки у світі
-            листкового тіста.
+            далі буде ще, бо ми вже розробляємо цікаві новинки у світі листкового тіста.
           </h2>
         </div>
         </div>
