--- a/index.html
+++ b/index.html
@@ -111,18 +111,17 @@
         <div class="container text__container">
           <div class="carousel">
 
-           <div class="slide">
-          <!-- <div class="slide" style="background-image: url(./images/hero/hero1.jpg);"> -->
+       
+          <div class="slide" style="background-image: url(./images/hero/hero1_lg.jpg);"> 
               <h1 class="hero__title text--animated">
                 Наші круасани - це симфонія смаків.
               </h1>
               <h2 class="hero__subtitle subtitle--animated">Cпівпрацюйте з нами !</h2>
             </div>
 
-          <div class="slide"></div>
-          <div class="slide"></div>
-           <!-- <div class="slide" style="background-image: url(./images/hero/hero2.jpg);"></div> -->
-           <!-- <div class="slide" style="background-image: url(./images/hero/hero3.jpg);"></div> -->
+  
+           <div class="slide" style="background-image: url(./images/hero/hero2_lg.jpg);"></div>
+            <div class="slide" style="background-image: url(./images/hero/hero3_lg.jpg);"></div> 
           </div>  
         </div>
       </section> 
