--- a/index.html
+++ b/index.html
@@ -107,8 +107,8 @@
     <!--Main content-->
     <main>
       <!--Hero-->
-      <section class="hero section">
-        <div class="container text__container">
+      <section class="hero">
+        <div class="text__container">
           <div class="carousel">
 
        
